# sciim-toolkit

./: .gitignore  README.md  pyproject.toml  sciim_toolkit.spec
.github/: copilot-instructions.md
.github/workflows/: build-executables.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: BUILDING.md  architecture.md
src/sciim_toolkit/: __init__.py
src/sciim_toolkit/app/: __init__.py  main.py  main_window.py
src/sciim_toolkit/features/: __init__.py
src/sciim_toolkit/features/common/: __init__.py  placeholder.py
src/sciim_toolkit/features/imaging_planner/: __init__.py  planner_service.py  ui.py
src/sciim_toolkit/features/maxrf_corrections/: __init__.py  drawing_widget.py  image_io.py  pipeline.py  ui.py
src/sciim_toolkit/features/maxrf_edit/: __init__.py  compile_tab.py  false_colour_tab.py  map_setup_tab.py  ui.py
src/sciim_toolkit/features/project_setup/: __init__.py  ui.py
src/sciim_toolkit/features/registration/: __init__.py  registration_service.py  ui.py
src/sciim_toolkit/models/: project.py
src/sciim_toolkit/services/: __init__.py  session_io.py  user_settings.py
